// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toJsonSchema render > applies hooks until one stops the transformation 1`] = `
{
  "$ref": "#/definitions/HookedValue",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "HookedValue": {
      "type": "boolean",
    },
  },
}
`;

exports[`toJsonSchema render > ignores context declarations without schema 1`] = `
{
  "$ref": "#/definitions/Value",
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": {
    "Value": {
      "type": "boolean",
    },
  },
}
`;

exports[`toJsonSchema render > renders json schema 2020-12 output 1`] = `
{
  "$defs": {
    "ProductStock": {
      "additionalProperties": false,
      "properties": {
        "id": {
          "format": "uuid",
          "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
          "type": "string",
        },
        "stock": {
          "minimum": 0,
          "type": "integer",
        },
      },
      "required": [
        "id",
        "stock",
      ],
      "type": "object",
    },
  },
  "$ref": "#/$defs/ProductStock",
  "$schema": "jsonSchema202012",
}
`;

exports[`toJsonSchema render > renders open api 3 output 1`] = `
{
  "$ref": "#/components/schemas/CustomerContact",
  "components": {
    "schemas": {
      "CustomerContact": {
        "additionalProperties": false,
        "properties": {
          "active": {
            "type": "boolean",
          },
          "email": {
            "format": "email",
            "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
            "type": "string",
          },
        },
        "required": [
          "email",
          "active",
        ],
        "type": "object",
      },
    },
  },
  "openapi": "https://spec.openapis.org/oas/3.0.3",
}
`;

exports[`toJsonSchema render > throws when a type transformer builds an error 1`] = `[Error: Error during the render of a data structure as a JsonSchema.]`;
